# todo_cli

./: .gitignore  main.py  pyproject.toml  tasks_db.db
todo_cli/: database.py  display.py  status.py  task_model.py
