[project]
name = "todo-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prettytable>=3.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
]
